required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk):
----------------------------

- Fixed big Oracle memory leak when rendering in KML (#3719)

- avoid linking in postgres dependencies unnecessarily (#3708)

- don't initialize outputformats until they are selected

- use "seamless" creation of tiles for polygon fills with vector symbols

- Ability to escape single/double quotes inside a string (#3706)

- Globally replace msCaseFindSubstring with strcasestr (#3255)

- support GROUP layers in shp2img (#3746)

- Honour MAXSIZE for WCS 2.0 responses (#3204).

- fallback to ows_title for WCS ows:Title of CoverageDescription (#3528)

- Added msIO_stripStdoutBufferContentHeaders() to strip off all Content-* headers from a buffer (#3673, #3665).

- Added raster classification support for STYLE level OPACITY.

- Allow attribute references, that is [itemname], within a TEXT string (#3736)

- Fixed segmentation fault when parsing invalid extent arguments in shp2img (#3734)

- Make "openlayers mode" work even without OWS support (#3732)

- Add a static table to define the axis order for soem epsg codes (#3582)

- Add possibility to use KML_NAME_ITEM (#3728)

- Fixed mapfile parsing error when a label angle referenced an attribute 
  (e.g. ANGLE [angle]) #3727

- Removed executable flag on some source files (#3726)

- Fixed SQL Spatial to be able to use UniqueIdentifier field as unique key (#3722)

- Fix PHP Windows build (#3714)

- Fixed --with-opengl build issue: Look for OpenGL libs under /usr/lib64 as 
  well (#3724)


Version 6.0.0-beta1 (2011-03-09)
--------------------------------

- Fixed Core Dump from Format=KML/Z with Oracle Spatial layers (#3713)
